--- a/decoder/Makefile
+++ b/decoder/Makefile
@@ -1,6 +1,10 @@
 CFLAGS = -O0 -Wall -Werror -Wno-unused-function -ansi
 CFLAGS += -ggdb
-CFLAGS += -DFONT_NAME=fixed_7x14
 
-render_bmp: render_bmp.c rlefont.c fixed_7x14.c
-	$(CC) $(CFLAGS) -o $@ $^
+FONTS = ../fonts/*.c
+
+render_bmp: render_bmp.c rlefont.c $(FONTS) | fonts.h
+	$(CC) $(CFLAGS) -I ../fonts -I . -o $@ $^
+
+fonts.h: ../fonts/*.h
+	cat ../fonts/*.h > fonts.h
