Simple autokerning functionality

--- a/decoder/Makefile
+++ b/decoder/Makefile
@@ -3,7 +3,7 @@ CFLAGS += -ggdb
 
 FONTS = ../fonts/*.c
 
-render_bmp: render_bmp.c rlefont.c mini_utf8.c $(FONTS) | fonts.h
+render_bmp: render_bmp.c rlefont.c mini_utf8.c autokerning.c $(FONTS) | fonts.h
 	$(CC) $(CFLAGS) -I ../fonts -I . -o $@ $^
 
 fonts.h: ../fonts/*.h
