--- a/fonts/Makefile
+++ b/fonts/Makefile
@@ -8,7 +8,10 @@ FONTS = DejaVuSans12 DejaVuSerif16 \
 # Characters to include in the fonts
 CHARS = 0-255 0x2010-0x2015
 
-all: $(FONTS:=.c)
+all: $(FONTS:=.c) fonts.h
+
+fonts.h: $(FONTS:=.h)
+	echo $(foreach font,$(FONTS),'\n#include "'$(font)'.h"') > $@
 
 %.c %.h: %.dat
 	$(MCUFONT) filter $< $(CHARS)
