Add mf_ prefix to all .c files

--- a/examples/render_bmp/Makefile
+++ b/examples/render_bmp/Makefile
@@ -11,11 +11,11 @@ DECODERDIR = ../../decoder
 FONTS = ../../fonts/*.c
 
 # List of required decoder components
-DECODER = $(DECODERDIR)/rlefont.c \
-          $(DECODERDIR)/mini_utf8.c \
-          $(DECODERDIR)/autokerning.c \
-          $(DECODERDIR)/wordwrap.c \
-          $(DECODERDIR)/justify.c
+DECODER = $(DECODERDIR)/mf_rlefont.c \
+          $(DECODERDIR)/mf_encoding.c \
+          $(DECODERDIR)/mf_kerning.c \
+          $(DECODERDIR)/mf_wordwrap.c \
+          $(DECODERDIR)/mf_justify.c
 
 render_bmp: render_bmp.c $(DECODER) $(FONTS)
 	$(CC) $(CFLAGS) -I $(FONTDIR) -I $(DECODERDIR) -o $@ $^
