--- a/tests/layout/Makefile
+++ b/tests/layout/Makefile
@@ -2,4 +2,4 @@ RENDER = ../../examples/render_bmp/render_bmp
 INPUT = ../example_text.txt
 
 justified.bmp: $(RENDER) $(INPUT)
-	$(RENDER) DejaVuSerif16 $@ "`cat $(INPUT)`"
+	$(RENDER) -f DejaVuSerif16 -w 400 -o $@ "`cat $(INPUT)`"
