--- a/fonts/Makefile
+++ b/fonts/Makefile
@@ -1,8 +1,8 @@
 # Path to the command-line utility program
-MCUFONT = ../encoder/compress
+MCUFONT = ../encoder/mcufont
 
 # Names of fonts to process
-FONTS = DejaVuSans12 DejaVuSerif16 \
+FONTS = DejaVuSans12 DejaVuSans12bw DejaVuSerif16 DejaVuSerif32 \
 	fixed_5x8 fixed_7x14 fixed_10x20
 
 # Characters to include in the fonts
@@ -19,10 +19,16 @@ fonts.h: $(FONTS:=.h)
 	$(MCUFONT) export $< $(basename $<)
 
 DejaVuSans12.dat: DejaVuSans.ttf
-	$(MCUFONT) import $< 12
+	$(MCUFONT) import_ttf $< 12
+
+DejaVuSans12bw.dat: DejaVuSans.ttf
+	$(MCUFONT) import_ttf $< 12 bw
 	
 DejaVuSerif16.dat: DejaVuSerif.ttf
-	$(MCUFONT) import $< 16
+	$(MCUFONT) import_ttf $< 16
+
+DejaVuSerif32.dat: DejaVuSerif.ttf
+	$(MCUFONT) import_ttf $< 32
 
 %.dat: %.bdf
 	$(MCUFONT) import_bdf $<
