--- a/examples/render_bmp/Makefile
+++ b/examples/render_bmp/Makefile
@@ -17,5 +17,10 @@ DECODER = $(DECODERDIR)/mf_rlefont.c \
           $(DECODERDIR)/mf_wordwrap.c \
           $(DECODERDIR)/mf_justify.c
 
+all: render_bmp
+
 render_bmp: render_bmp.c write_bmp.c $(DECODER) $(FONTS)
 	$(CC) $(CFLAGS) -I $(FONTDIR) -I $(DECODERDIR) -o $@ $^
+
+clean:
+	rm -f render_bmp
