Better makefile dependencies

--- a/fonts/Makefile
+++ b/fonts/Makefile
@@ -8,7 +8,7 @@ FONTS = DejaVuSans12 DejaVuSans12bw DejaVuSerif16 DejaVuSerif32 \
 # Characters to include in the fonts
 CHARS = 0-255 0x2010-0x2015
 
-all: $(FONTS:=.c) fonts.h
+all: $(FONTS:=.c) $(FONTS:=.dat) fonts.h
 
 clean:
 	rm -f $(FONTS:=.c) $(FONTS:=.h) $(FONTS:=.dat)
@@ -16,22 +16,30 @@ clean:
 fonts.h: $(FONTS:=.h)
 	echo $(foreach font,$(FONTS),'\n#include "'$(font)'.h"') > $@
 
-%.c %.h: %.dat
-	$(MCUFONT) filter $< $(CHARS)
-	$(MCUFONT) optimize $< 50
+%.c %.h: %.dat $(MCUFONT)
 	$(MCUFONT) export $< $(basename $<)
 
 DejaVuSans12.dat: DejaVuSans.ttf
 	$(MCUFONT) import_ttf $< 12
+	$(MCUFONT) filter $@ $(CHARS)
+	$(MCUFONT) optimize $@ 50
 
 DejaVuSans12bw.dat: DejaVuSans.ttf
 	$(MCUFONT) import_ttf $< 12 bw
-	
+	$(MCUFONT) filter $@ $(CHARS)
+	$(MCUFONT) optimize $@ 50
+
 DejaVuSerif16.dat: DejaVuSerif.ttf
 	$(MCUFONT) import_ttf $< 16
+	$(MCUFONT) filter $@ $(CHARS)
+	$(MCUFONT) optimize $@ 50
 
 DejaVuSerif32.dat: DejaVuSerif.ttf
 	$(MCUFONT) import_ttf $< 32
+	$(MCUFONT) filter $@ $(CHARS)
+	$(MCUFONT) optimize $@ 50
 
 %.dat: %.bdf
 	$(MCUFONT) import_bdf $<
+	$(MCUFONT) filter $@ $(CHARS)
+	$(MCUFONT) optimize $@ 50
