--- a/examples/render_bmp/Makefile
+++ b/examples/render_bmp/Makefile
@@ -16,6 +16,7 @@ DECODER = $(DECODERDIR)/mf_encoding.c \
           $(DECODERDIR)/mf_justify.c \
           $(DECODERDIR)/mf_kerning.c \
           $(DECODERDIR)/mf_rlefont.c \
+          $(DECODERDIR)/mf_bwfont.c \
           $(DECODERDIR)/mf_wordwrap.c
           
 all: render_bmp
