Change the font inclusion logic.
Now only .c files are generated, and they are all included into mf_font.c.
It is still possible to use fonts separately, but now in the default case
there is no need to separately include the font definitions.

--- a/examples/render_bmp/Makefile
+++ b/examples/render_bmp/Makefile
@@ -7,13 +7,10 @@ FONTDIR = ../../fonts
 # Directory containing the decoder source code.
 MFDIR = ../../decoder
 include $(MFDIR)/mcufont.mk
-
-# List of fonts to include
-FONTS = ../../fonts/*.c
           
 all: render_bmp
 
-render_bmp: render_bmp.c write_bmp.c $(MFSRC) $(FONTS)
+render_bmp: render_bmp.c write_bmp.c $(MFSRC)
 	$(CC) $(CFLAGS) -I $(FONTDIR) -I $(MFINC) -o $@ $^
 
 clean:
