Get rid of some unused function warnings

--- a/examples/render_bmp/Makefile
+++ b/examples/render_bmp/Makefile
@@ -1,4 +1,4 @@
-CFLAGS = -O0 -Wall -Werror -Wno-unused-function -ansi
+CFLAGS = -O0 -Wall -Werror -ansi
 CFLAGS += -ggdb
 
 # Directory containing the font files.
