Fix encoder compilation errors with gcc 4.9

--- a/encoder/Makefile
+++ b/encoder/Makefile
@@ -1,4 +1,4 @@
-CXXFLAGS = -O2 -Wall -Werror -Wno-unused-function -std=c++0x
+CXXFLAGS = -O2 -Wall -Werror -Wno-unused-function -Wno-sign-compare -std=c++0x
 CXXFLAGS += -ggdb
 LDFLAGS += -pthread
 
