fix compilation on macOS
On macOS the /bin/echo utility prints "-e" literally instead of
expanding escapes in the given strings. Use the printf shell builtin
instead which does support escape sequences by default and is
standardized.

--- a/fonts/Makefile
+++ b/fonts/Makefile
@@ -14,7 +14,7 @@ clean:
 	rm -f $(FONTS:=.c) $(FONTS:=.dat)
 
 fonts.h: $(FONTS:=.c)
-	/bin/echo -e $(foreach font,$(FONTS),'\n#include "'$(font)'.c"') > $@
+	printf '$(foreach font,$(FONTS),\n#include "$(font).c")\n' > $@
 
 %.c: %.dat $(MCUFONT)
 	$(MCUFONT) rlefont_export $<
